cmake_minimum_required(VERSION 3.23)
project(untitled4)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled4
        Product.cpp
        Product.h
        user.h
        user.cpp
        Category.cpp
        Category.h
        cart.cpp
        cart.h
        main.cpp
        Sales.cpp
        Sales.h
        MainSystem.cpp
        MainSystem.h)
